--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -110,10 +110,9 @@
 	</build>
 
 	<properties>
-		<MODULE_ID>${project.parent.artifactId}</MODULE_ID>
+		<MODULE_ID>${artifactId}</MODULE_ID>
 		<MODULE_NAME>${project.parent.name}</MODULE_NAME>
 		<MODULE_VERSION>${project.parent.version}</MODULE_VERSION>
-		<MODULE_PACKAGE>${project.parent.groupId}.${project.parent.artifactId}</MODULE_PACKAGE>
+		<MODULE_PACKAGE>${project.parent.groupId}.${artifactId}</MODULE_PACKAGE>
 	</properties>
-
 </project>
