--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -44,6 +44,12 @@
 			<artifactId>openmrs-test</artifactId>
 			<type>pom</type>
 		</dependency>
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>6.0.1</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -110,8 +116,31 @@
 			</plugin>
 		</plugins>
 	</build>
-
-	<properties>
+ <profiles>
+  <profile>
+   <id>netbeans-private-testng</id>
+   <activation>
+    <property>
+     <name>netbeans.testng.action</name>
+    </property>
+   </activation>
+   <build>
+    <plugins>
+     <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-surefire-plugin</artifactId>
+      <version>2.8.1</version>
+      <configuration>
+       <suiteXmlFiles>
+        <suiteXmlFile>target/nb-private/testng-suite.xml</suiteXmlFile>
+       </suiteXmlFiles>
+      </configuration>
+     </plugin>
+    </plugins>
+   </build>
+  </profile>
+ </profiles>
+ <properties>
 		<MODULE_ID>${artifactId}</MODULE_ID>
 		<MODULE_NAME>${project.parent.name}</MODULE_NAME>
 		<MODULE_VERSION>${project.parent.version}</MODULE_VERSION>
