--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,7 @@
 	</dependencyManagement>
 
 	<properties>
-		<openMRSVersion>1.8.0-alpha</openMRSVersion>
+		<openMRSVersion>1.8.0-SNAPSHOT</openMRSVersion>
 	</properties>
 
 	<build>
