Added sine extra credit stuff.
git-svn-id: http://svn.openmrs.org/openmrs-modules/feedback/trunk@22027 5bac5841-c719-aa4e-b3fe-cce5062f897a

--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -44,6 +44,12 @@
 			<artifactId>openmrs-test</artifactId>
 			<type>pom</type>
 		</dependency>
+	 <dependency>
+	  <groupId>com.ocpsoft</groupId>
+	  <artifactId>ocpsoft-pretty-time</artifactId>
+	  <version>1.0.5</version>
+	  <scope>runtime</scope>
+	 </dependency>
 	</dependencies>
 
 	<build>
