--- a/pom.xml
+++ b/pom.xml
@@ -117,5 +117,12 @@
 			</snapshots>
 		</pluginRepository>
 	</pluginRepositories>
-
+    <dependencies>
+        <dependency>
+            <groupId>com.ocpsoft</groupId>
+            <artifactId>ocpsoft-pretty-time</artifactId>
+            <version>1.0.5</version>
+            <scope>runtime</scope>
+        </dependency>
+    </dependencies>
 </project>
